доработан метод проверки пересечений